# async-tg-bot

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: utils.py
tests/: test_main.py  test_utils.py
